# meta-pytorch-hackathon

./: Dockerfile  README.md  app.py  demo.py  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh
server/: app.py  environment.py
