[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finops-ai-optimizer"
version = "0.1.0"
description = "Real-world Cloud Cost Optimization Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "openai",
    "streamlit",
    "pandas",
    "openenv-core>=0.2.3"
]

[project.scripts]
server = "openenv.core.server:main"

[tool.openenv]
entrypoint = "inference.py"